# Live-Computer-stats-WELLZ-

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
wellz/: __init__.py  cli.py  gui.py
wellz/config/: __init__.py  default.toml  manager.py  themes.py
wellz/core/: __init__.py  collectors.py  history.py
wellz/process/: __init__.py  manager.py  signals.py
wellz/ui/: __init__.py  app.py  input_handler.py  layout.py
wellz/ui/panels/: __init__.py  cpu_panel.py  disk_panel.py  gpu_panel.py  help_panel.py  memory_panel.py  network_panel.py  process_panel.py
wellz/ui/widgets/: __init__.py  bar.py  base.py  box.py  graph.py
