[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wellz"
version = "1.0.0"
description = "A visually artistic gaming PC stats dashboard for your terminal"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Wellz26", email = "wellz26@github.com"}
]
keywords = ["system", "monitor", "gaming", "pc", "stats", "terminal", "cli", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
dependencies = [
    "psutil>=5.9.0",
]

[project.scripts]
wellz = "wellz.cli:main"
wellz-gui = "wellz.gui:main"

[project.urls]
Homepage = "https://github.com/Wellz26/Live-Computer-stats-WELLZ-"
Repository = "https://github.com/Wellz26/Live-Computer-stats-WELLZ-"
